aggiunte nuova sezione ed icone sulla voce tecnologie usate

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
             <div class="col-12 col-lg-6 paragraph-text mt-big">
                 <p class="reveal text_view">Sono una persona estroversa, solare, con molte passioni tra cui ovviamente la programmazione, realtà virtuale, mondo IT e tutto ciò che riguarda l'innovazione digitale e tecnologica.</p>
                 <p class="reveal text_view">Il design e web design mi hanno sempre affascinato particolarmente, infatti mi tengo sempre aggiornato su novità, osservando molto anche da professionisti per prendere spunto.</p>
-                <p class="reveal text_view">Finito il percoso di studi a fine maggio 2022 continuo nell'aprofondire argomenti e concetti, studiando linguaggi e stili nuovi. Nel frattempo realizzo in autonomia qualche sito web per delle attività commerciali mettendomi sempre alla prova.</p>
-                <p class="reveal mt-4 cv_look"><a href="./Matteo_Morganti_cv.pdf" download>Guarda Cv</a></p>
+                <div class="d-flex">
+                    <p class="reveal text_view me-3"><a class="text-white" href="https://github.com/Matteo9099">Github</a></p>
+                    <p class="reveal text_view"><a class="text-white" href="https://www.linkedin.com/in/matteo-morganti-developer">Linkedln</a></p>
+                </div>
+                <p class="reveal mt-4 cv_look"><a href="cv_matteo_morganti.pdf" download>Guarda Cv</a></p>
             </div>
         </div>
     </section>
@@ -98,7 +101,7 @@
                     </div>
                     <div class="cv_body">
                         <p class="text_view reveal">
-                            Creazione di pagine web in <strong class="fw-bold">HTML</strong>, <strong class="fw-bold">CSS</strong> e <strong class="fw-bold">JAVASCRIPT</strong> con relativi framework <strong class="fw-bold">VueJs</strong> e la libreria <strong class="fw-bold">REACT</strong>.
+                            Creazione di pagine web in <strong class="fw-bold">HTML</strong>, <strong class="fw-bold">CSS</strong> e <strong class="fw-bold">JAVASCRIPT</strong> con relativi framework <strong class="fw-bold">VueJs</strong>, <strong class="fw-bold">Angular</strong> e la libreria <strong class="fw-bold">REACT</strong>.
                         </p>
                     </div>
                 </div>
@@ -126,7 +129,7 @@
                     </div>
                     <div class="cv_body">
                         <p class="text_view reveal">
-                            Costruire applicazioni web utilizzando framework come <strong class="fw-bold"> LARAVEL </strong>associato a un framework di front per creare funzionalità di autenticazione, creazione contenuti e ricerca avanzata.
+                            Costruire applicazioni web utilizzando framework come <strong class="fw-bold">LARAVEL</strong> o <strong class="fw-bold">JAVA</strong> associato a un framework di front per creare funzionalità di autenticazione, creazione contenuti e ricerca avanzata.
                         </p>
                     </div>
                 </div>
@@ -134,6 +137,32 @@
         </div>
     </section>
     <!-- End curriculum -->
+
+    <!-- start strumenti di lavoro -->
+    <section class="container" id="work">
+        <div class="profile-title">
+            <h3 class="sec_text reveal text-white">TECNOLOGIE USATE PRINCIPALMENTE</h3>
+        </div>
+        <div class="item-container mb-5">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-lg-2 col-6 reveal">
+                    <img src="./img/angular.png" alt="angular_logo" title="angular">
+                </div>
+                <div class="col-lg-2 col-6 reveal">
+                    <img src="./img/ngrx.png" alt="angular_logo" title="redux">
+                </div>
+                <div class="col-lg-2 col-6 reveal">
+                    <img src="./img/java.png" alt="angular_logo" title="java">
+                </div>
+                <div class="col-lg-2 col-6 reveal">
+                    <img src="./img/spring_boot.png" alt="angular_logo" title="spring boot">
+                </div>
+                <div class="col-lg-2 col-6 reveal">
+                    <img src="./img/mongodb.png" alt="angular_logo" title="mongoDB">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     
